# fa_service

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 37be937791fb_.py
app/: config.py  main.py  orm.py  repository.py
app/adapters/: repository.py
app/api/: schema.py
app/api/endpoints/: __init__.py  allocations.py
app/domain/: models.py  schemas.py  services.py
app/service_layer/: services.py  unit_or_work.py
app/service_layer/interfaces/: repository.py
tests/: conftest.py
tests/integration/: test_repository.py  test_uow.py  utils.py
tests/unit/: test_batches.py  test_models.py  test_product.py  utils.py
