[tool.poetry]
name = "fa_service"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.36"
sqlalchemy2-stubs = "^0.0.2-alpha.22"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"
pylint-print = "^1.0.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
